--- a/Framework/ReadConfigFile.xaml
+++ b/Framework/ReadConfigFile.xaml
@@ -1,10 +1,9 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="ReadConfigFile" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:this="clr-namespace:" xmlns:ue="clr-namespace:UiPath.Excel;assembly=UiPath.Excel.Activities" xmlns:ueab="clr-namespace:UiPath.Excel.Activities.Business;assembly=UiPath.Excel.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="ReadConfigFile" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:this="clr-namespace:" xmlns:ue="clr-namespace:UiPath.Excel;assembly=UiPath.Excel.Activities" xmlns:ueab="clr-namespace:UiPath.Excel.Activities.Business;assembly=UiPath.Excel.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="out_DataTableMessages" Type="OutArgument(sd:DataTable)" />
-    <x:Property Name="out_DataTableConfigData" Type="OutArgument(sd:DataTable)" />
     <x:Property Name="in_StrConfigFilePath" Type="InArgument(x:String)" />
     <x:Property Name="in_StrConfigFileSheetNameData" Type="InArgument(x:String)" />
     <x:Property Name="in_StrConfigFileSheetNameMessages" Type="InArgument(x:String)" />
+    <x:Property Name="in_StrConfigFileSheetNamePlatforms" Type="InArgument(x:String)" />
   </x:Members>
   <this:ReadConfigFile.in_StrConfigFilePath>
     <InArgument x:TypeArguments="x:String">
@@ -21,10 +20,15 @@
       <Literal x:TypeArguments="x:String" Value="" />
     </InArgument>
   </this:ReadConfigFile.in_StrConfigFileSheetNameMessages>
+  <this:ReadConfigFile.in_StrConfigFileSheetNamePlatforms>
+    <InArgument x:TypeArguments="x:String">
+      <Literal x:TypeArguments="x:String" Value="" />
+    </InArgument>
+  </this:ReadConfigFile.in_StrConfigFileSheetNamePlatforms>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1170,2670</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1115,2888</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ReadConfigFile_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="34">
@@ -123,7 +127,7 @@
       <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence sap2010:Annotation.AnnotationText="Reads the Microsoft Excel configuration file and populates the ConfigData and Messages data tables out arguments." DisplayName="Sequence ReadConfigFile" sap:VirtualizedContainerService.HintSize="880,2605" sap2010:WorkflowViewState.IdRef="Sequence_9">
+  <Sequence sap2010:Annotation.AnnotationText="Reads the Microsoft Excel configuration file and populates the ConfigData and Messages data tables out arguments." DisplayName="Sequence ReadConfigFile" sap:VirtualizedContainerService.HintSize="880,2823" sap2010:WorkflowViewState.IdRef="Sequence_9">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strWorkflowName">
         <Variable.Default>
@@ -147,14 +151,14 @@
       </sap:WorkflowViewStateService.ViewState>
       <ui:PathExists Resource="{x:Null}" DisplayName="Path Exists in_StrConfigFile" Exists="[isValidFilePath]" sap:VirtualizedContainerService.HintSize="338,99" sap2010:WorkflowViewState.IdRef="PathExists_2" Path="[in_StrConfigFilePath]" PathType="File" />
     </Sequence>
-    <Sequence DisplayName="Sequence Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="818,1909" sap2010:WorkflowViewState.IdRef="Sequence_14">
+    <Sequence DisplayName="Sequence Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="818,2127" sap2010:WorkflowViewState.IdRef="Sequence_14">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <If Condition="[isValidFilePath = true]" DisplayName="If isValidFilePath" sap:VirtualizedContainerService.HintSize="756,1787" sap2010:WorkflowViewState.IdRef="If_1">
+      <If Condition="[isValidFilePath = true]" DisplayName="If isValidFilePath" sap:VirtualizedContainerService.HintSize="756,2005" sap2010:WorkflowViewState.IdRef="If_1">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -162,7 +166,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <If.Then>
-          <TryCatch DisplayName="Try Catch Read Microsoft Excel File" sap:VirtualizedContainerService.HintSize="674,1523" sap2010:WorkflowViewState.IdRef="TryCatch_2">
+          <TryCatch DisplayName="Try Catch Read Microsoft Excel File" sap:VirtualizedContainerService.HintSize="674,1741" sap2010:WorkflowViewState.IdRef="TryCatch_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -170,32 +174,33 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <TryCatch.Try>
-              <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" ShowExcelWindow="{x:Null}" DisplayName="Excel Process Scope Config Data" sap:VirtualizedContainerService.HintSize="636,1037" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_3">
+              <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" DisplayName="Excel Process Scope Config Data" sap:VirtualizedContainerService.HintSize="636,1255" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_3" ShowExcelWindow="False">
                 <ueab:ExcelProcessScopeX.Body>
                   <ActivityAction x:TypeArguments="ui:IExcelProcess">
                     <ActivityAction.Argument>
                       <DelegateInArgument x:TypeArguments="ui:IExcelProcess" Name="ExcelProcessScopeTag" />
                     </ActivityAction.Argument>
-                    <Sequence DisplayName="Do Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="602,941" sap2010:WorkflowViewState.IdRef="Sequence_20">
+                    <Sequence DisplayName="Do Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="602,1159" sap2010:WorkflowViewState.IdRef="Sequence_20">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                      <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" DisplayName=" Data Scope Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="540,819" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_3" ResizeWindow="None" TemplatePath="Data\RobotGLaDOSConfig.xlsx" UseTemplate="True" WorkbookPath="[in_StrConfigFilePath]">
+                      <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" DisplayName=" Data Scope Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="540,1037" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_3" ResizeWindow="None" TemplatePath="Data\RobotGLaDOSConfig.xlsx" UseTemplate="True" WorkbookPath="[in_StrConfigFilePath]">
                         <ueab:ExcelApplicationCard.Body>
                           <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
                             <ActivityAction.Argument>
                               <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="Excel" />
                             </ActivityAction.Argument>
-                            <Sequence DisplayName="Do Read Config" sap:VirtualizedContainerService.HintSize="506,518" sap2010:WorkflowViewState.IdRef="Sequence_19">
+                            <Sequence DisplayName="Do Read Config" sap:VirtualizedContainerService.HintSize="506,736" sap2010:WorkflowViewState.IdRef="Sequence_19">
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                 </scg:Dictionary>
                               </sap:WorkflowViewStateService.ViewState>
-                              <ueab:ReadRangeX DisplayName="Read Range Config Data" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_4" Range="[Excel.Sheet(in_StrConfigFileSheetNameData)]" SaveTo="[out_DataTableConfigData]" />
-                              <ueab:ReadRangeX DisplayName="Read Range Config Messages" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_5" Range="[Excel.Sheet(in_StrConfigFileSheetNameMessages)]" SaveTo="[out_DataTableMessages]" />
+                              <ueab:ReadRangeX DisplayName="Read Range Config Data" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_4" Range="[Excel.Sheet(in_StrConfigFileSheetNameData)]" SaveTo="[dt_ConfigData]" />
+                              <ueab:ReadRangeX DisplayName="Read Range Config Messages" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_5" Range="[Excel.Sheet(in_StrConfigFileSheetNameMessages)]" SaveTo="[dt_Messages]" />
+                              <ueab:ReadRangeX DisplayName="Read Range Config Platform" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_6" Range="[Excel.Sheet(in_StrConfigFileSheetNamePlatforms)]" SaveTo="[dt_ConfigPlatforms]" />
                             </Sequence>
                           </ActivityAction>
                         </ueab:ExcelApplicationCard.Body>
